fix(#2599): Horizontal overflow bug on homepage in mobile version

--- a/public/styles/helpers/_code.scss
+++ b/public/styles/helpers/_code.scss
@@ -60,7 +60,7 @@ pre code {
       word-wrap: normal;
       background-color: transparent;
       border: 0;
-
+      white-space: pre-line;
       &:before,
       &:after {
         content: none;
